welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:17: error: value update is not a member of Boolean
			vuBiscuit() = true;arriere();
                        ^